# swagger/swagger-output.json
@@ -675,7 +675,7 @@
         }
       }
     },
-    "/api/buslocationedge/{routeId}/{cdate}": {
+    "/api/buslocationedge/{routeId}": {
       "get": {
         "description": "edge device 통한 실시간 BUS정류장 도착 정보조회",
         "tags": ["routeStation"],
@@ -688,16 +688,8 @@
               "type": "string"
             },
             "example": 19
-          },
-          {
-            "name": "cdate",
-            "in": "path",
-            "required": false,
-            "schema": {
-              "type": "string"
-            },
-            "example": "1900-01-01"
           }
+
         ],
         "responses": {
           "200": {
@@ -792,7 +784,7 @@
         }
       }
     },
-    "/api/work": {
+    "/api/getworkaddshift/{routeId}/{date}": {
       "get": {
         "description": "work with shift(?isrun=1&companyId=1&routeId=6)",
         "tags": ["work"],
